# spark-rs

./: .gitignore  Cargo.toml
spark/: Cargo.toml
spark-core/: Cargo.toml
spark-core/src/: config.rs  context.rs  data.rs  dependency.rs  error.rs  iter.rs  lib.rs  partition.rs  rdd.rs  scheduler.rs  serialize.rs  session.rs
spark-core/src/rdd/: map.rs  parallel_collection.rs
spark-core/src/scheduler/: event.rs  job.rs  stage.rs  task.rs  task_scheduler.rs
spark-core/src/scheduler/task_scheduler/: distributed.rs  local.rs
spark-core/tests/integration/: main.rs
spark-ds/: Cargo.toml
spark-ds/src/: hash.rs  lib.rs  sync.rs  tests.rs
spark-executor/: Cargo.toml
spark-executor/src/: backend.rs  lib.rs  local_executor.rs
spark-py/: Cargo.toml  Dockerfile
spark-py/src/: lib.rs  rdd.rs  serialize.rs
spark-shell/: Cargo.toml
spark-start-master/: Cargo.toml
spark-start-master/src/: main.rs
spark-start-worker/: Cargo.toml  Dockerfile
spark-start-worker/src/: main.rs
spark-submit/: Cargo.toml
spark-submit/src/: main.rs
spark/benches/: bench.rs
spark/src/: broadcast.rs  cluster.rs  config.rs  context.rs  data.rs  dependency.rs  env.rs  error.rs  executor.rs  iter.rs  lib.rs  rdd.rs  rpc.rs  scheduler.rs  serialize.rs  session.rs
spark/src/cluster/: kubernetes.rs  standalone.rs
spark/src/executor/: backend.rs  local.rs
spark/src/rdd/: filter.rs  map.rs  parallel_collection.rs
spark/src/rpc/: tests.rs
spark/src/scheduler/: dag_scheduler.rs  event.rs  job.rs  stage.rs  task.rs  task_scheduler.rs
spark/src/scheduler/task_scheduler/: distributed.rs  local.rs
spark/tests/integration/: main.rs
spark/tests/integration-tests/: main.rs  random.rs
