[package]
name = "spark-core"
version = "0.1.0"
edition = "2021"

[dependencies]
num_cpus = "1.13"
indexed_vec = "1"
async-trait = "0.1"
static_assertions = "1"
dashmap = "4"
spark-ds = { path = "../spark-ds" }
tokio = { version = "1.1", features = ["rt-multi-thread", "macros", "sync", "test-util"] }
