[package]
name = "spark-core"
version = "0.1.0"
edition = "2021"

[dependencies]
num_cpus = "1.13"
async-trait = "0.1"
typetag = "0.1"
static_assertions = "1"
dashmap = "4"
fixedbitset = "0.4"
anyhow = "1"
bincode = "1"
indexed_vec = "1"
serde_derive = "1"
serde_traitobject = "0.2"
serde_closure = "0.3"
spark-ds = { path = "../spark-ds" }
serde = { version = "1", features = ["derive", "rc"] }
tokio = { version = "1.1", features = ["rt-multi-thread", "macros", "sync", "test-util"] }
