[package]
name = "spark-py"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = { version = "0.6.5" }
pythonize = "0.14"
serde_closure = "0.3"
serde = "1"
serde_traitobject = { git = "ssh://git@github.com/andyyu2004/serde_traitobject" }
pyo3-asyncio = { version = "0.14", features = ["attributes", "tokio-runtime"] }

[dependencies.spark]
path = "../spark"

[lib]
name = "pyspark"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module", "serde"]
