[package]
name = "spark-py"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
eyre = { version = "0.6.5" }
pythonize = "0.14"
serde_closure = "0.3"
serde = "1"
static_assertions = "1"
serde_traitobject = { git = "https://github.com/andyyu2004/serde_traitobject.git" }
pyo3-asyncio = { version = "0.14", features = ["attributes", "tokio-runtime"] }

[dependencies.spark]
path = "../spark"

[lib]
name = "pyspark"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module", "serde"]
