[package]
name = "spark-submit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = "3.0.0-beta.5"
num_cpus = "1"
tracing-subscriber = "0.2"
tracing = "0.1"
spark = { path = "../spark" }
tarpc = { version = "0.27", features = ["full"] }
tokio = { version = "1.1", features = ["io-util", "io-std"] }
tokio-serde = { version = "0.8", features = ["bincode", "json"] }

