[package]
name = "spark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-bincode = "0.6.1"
async-recursion = "0.3"
async-trait = "0.1"
bincode = "1"
dashmap = "4"
downcast-rs = "1.2.0"
fixedbitset = "0.4"
futures = "0.3"
indexed_vec = "1"
num_cpus = "1.13"
parking_lot = "0.11.2"
rayon = "1"
serde_closure = "0.3"
serde_derive = "1"
static_assertions = "1"
typetag = "0.1"
tracing = "0.1"
tracing-flame = "0.1"
tracing-subscriber = "0.2"
spark-ds = { path = "../spark-ds" }
serde = { version = "1", features = ["derive", "rc"] }
tokio = { version = "1.1", features = ["rt-multi-thread", "macros", "sync", "test-util", "process", "io-util"] }
serde_traitobject = { git = "ssh://git@github.com/andyyu2004/serde_traitobject"}

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async", "async_tokio"] }

[[bench]]
name = "bench"
harness = false

[lib]
doctest = false

