[package]
name = "spark"
version = "0.1.0"
edition = "2021"

[dependencies]
async-bincode = "0.6.1"
async-recursion = "0.3"
async-trait = "0.1"
bincode = "1"
dashmap = "4"
downcast-rs = "1.2.0"
erased-serde = "0.3"
fixedbitset = "0.4"
futures = "0.3"
http = "0.2"
indexed_vec = "1"
num_cpus = "1.13"
parking_lot = "0.11.2"
rayon = "1"
serde_closure = "0.3"
serde_derive = "1"
static_assertions = "1"
thiserror = "1"
tracing = "0.1"
tracing-flame = "0.1"
tracing-subscriber = "0.2"
typetag = "0.1"
eyre = { version = "0.6.5" }
spark-ds = { path = "../spark-ds" }
kube = { version = "0.63.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_21"] }
serde = { version = "1", features = ["derive", "rc"] }
tarpc = { version = "0.27", features = ["serde-transport", "tcp"] }
tokio = { version = "1.1", features = ["rt-multi-thread", "macros", "sync", "test-util", "process", "io-util", "parking_lot"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
url = { version = "2", features = ["serde"] }
serde_traitobject = { git = "https://github.com/andyyu2004/serde_traitobject.git" }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async", "async_tokio"] }

[[bench]]
name = "bench"
harness = false

[lib]
doctest = false

